--- a/src/alpha/langs/lang.pl.json
+++ b/src/alpha/langs/lang.pl.json
@@ -3,73 +3,73 @@
   "commandsHelp":"Użyj '\/commands' aby zobaczyć rozszerzoną listę komend.",
   "autorespond":{
     "default":"Jestem z dala od klawiatury.",
-    "disable":"Wyłącz tryb automatycznej odpowiedzi AFK aby pisać ",
-    "nextIn":"Następna autoodpowiedź AFK będzie wysłana (z\/od) %1",
-    "next":"AFK autoodpowiedzi przy następnych wzmiankach",
+    "disable":"Wyłącz automatyczne odpowiedzi AFK aby pisać",
+    "nextIn":"Następna autoodpowiedź AFK zostanie wysłana za %1",
+    "next":"Autoodpowiedź AFK przy następnej wzmiance",
     "commandDisable":"%1 wiadomości AFK wyłączone",
     "commandNotEnabled":"%1 wiadomości AFK nie były włączone"
   },
   "autojoin":{
     "commandDisable":"%1 autojoin wyłączony",
-    "commandNotEnabled":"%1 automatyczne dołączanie nie jest włączone"
+    "commandNotEnabled":"%1 automatyczne dołączanie nie było włączone"
   },
   "fullscreen":{
-    "shrink":"Zminimalizuj",
+    "shrink":"Zmniejsz",
     "enlarge":"Powiększ"
   },
   "commands":{
-    "header":"plug&#179; Polecenia",
+    "header":"plug&#179; Komendy",
     "userCommands":"Komendy użytkownika",
     "modCommands":"Komendy moderacji",
     "variables":{
       "username":"nazwa użytkownika",
       "word":"słowo",
-      "on":"on",
+      "on":"Wł",
       "off":"Wył",
       "reason":"powód",
       "number":"numer"
     },
     "descriptions":{
       "join":"Dołącz do listy oczekiwania",
-      "leave":"Wyjdź z listy oczekiwania",
+      "leave":"skończ dj-kę \/ opuść listę oczekiwania",
       "whoami":"Uzyskaj informacje o sobie",
-      "mute":"wycisz dźwięk",
-      "automute":"Zarejestruj obecnie odtwarzany utwór, by automatycznie go wyciszać w przyszłości",
+      "mute":"wyłącz dźwięk",
+      "automute":"zapamiętaj obecnie odtwarzany utwór, by automatycznie go wyciszać w przyszłości",
       "unmute":"ustaw głośność na wartość przed wyciszeniem",
-      "nextsong":"Wyświetla następny utwór w liście odtwarzania, jeśli ten nie jest w historii",
+      "nextsong":"wyświetla następny utwór w liście odtwarzania i czy ten jest w historii",
       "refresh":"odśwież film",
-      "alertson":"Odtwarza dźwięk, gdy wybrane wyrazy będą napisane na czacie",
-      "alertsoff":"wyłącza odtwarzeanie dźwięku gdy dane słowa zostaną napisane na chacie",
-      "grab":"dodaj bieżący utwór do wybranej listy utworów",
+      "alertson":"odtwarza dźwięk, gdy określone wyrazy zostaną napisane na czacie",
+      "alertsoff":"wyłącza odtwarzanie dźwięku, gdy dane słowa zostaną napisane na czacie",
+      "grab":"dodaj bieżący utwór do aktywnej playlisty",
       "badges":"pokaż\/ukryj plakietki użytkowników na czacie",
-      "getpos":"pokazuje aktualną pozycję w liście oczekiwania",
-      "version":"pokazuje numer wersji",
+      "getpos":"pokazuje aktualną pozycję na liście oczekiwania",
+      "version":"pokazuje wersję",
       "commands":"pokazuje tę listę",
       "link":"wyślij link do strony internetowej plugCubed",
-      "whois":"zawiera ogólne informacje o użytkowniku",
+      "whois":"pobiera ogólne informacje o użytkowniku",
       "skip":"pomiń aktualną piosenkę",
-      "ban":"Wyrzuca zaznaczonego użytkownika",
+      "ban":"banuje oznaczonego użytkownika",
       "lockskip":"blokuje listę oczekiwania, pomija utwór oraz odblokowuje listę",
       "lock":"blokuje listę oczekiwania",
       "unlock":"odblokowuje listę oczekiwania",
-      "add":"dodaje podanego użytkownika do listy oczekiwania",
-      "remove":"usuwa podanego użytkownika z listy oczekiwania",
-      "whois all":"podaje numer identyfikacyjny oraz nazwę użytkownika każdego użytkownika znajdującego się w pokoju",
+      "add":"dodaje oznaczonego użytkownika do listy oczekiwania",
+      "remove":"usuwa oznaczonego użytkownika z listy oczekiwania",
+      "whois all":"pokazuje id oraz nazwy wszystkich użytkowników znajdujących się w pokoju",
       "banall":"zbanuj wszystkich użytkowników w tym pokoju",
-      "status":"pokaż status serwerów",
+      "status":"pokaż status serwerów plug.dj",
       "unload":"Wyłącz plug&#179;"
     },
     "responses":{
       "alertson":"Odtwarzanie dźwięku na następujące słowa: %1",
-      "alertsoff":"Dźwięk nie będzie już odtwarzany przy wcześniej podanych słowach",
+      "alertsoff":"Dźwięk nie będzie już odtwarzany przy określonych frazach",
       "badgeon":"Pokazywanie plakietek zostało włączone",
       "badgeoff":"Pokazywanie plakietek zostało wyłączone",
-      "nextsong":"Twoja następna piosenka w kolejce to %1 stworzona przez %2",
+      "nextsong":"Twoja następna piosenka w kolejce to %1 w wykonaniu %2",
       "isHistory":"Uwaga: ta piosenka jest wciąż w historii (%1 z %2)",
       "automute":{
         "automuted":"%1 został automatycznie wyciszony.",
-        "registered":"%1 zostanie automatycznie wyciszony podczas przyszłych odtworzeń.",
-        "unregistered":"%1 został usunięty z listy automatycnego wyciszania."
+        "registered":"%1 zostanie automatycznie wyciszony przy następnych odtworzeniach.",
+        "unregistered":"%1 został usunięty z listy automatycznego wyciszania."
       },
       "status":{
         "rest":"REST: %1 %2 [%3ms]",
@@ -87,60 +87,60 @@
     "header":"Powiadomienia czatu",
     "join":"Wejścia użytkowników",
     "leave":"Wyjścia użytkowników",
-    "grab":"Chwycenia użytkowników",
-    "meh":"Meh-y użytkownikowników",
+    "grab":"Graby użytkowników",
+    "meh":"Mehy użytkowników",
     "stats":"Statystyki utworów",
-    "updates":"Aktualizacje utworów",
-    "history":"Piosenki w historii",
-    "songUnavailable":"Piosenka niedostępna",
-    "boothAlert":"Booth Alert (%1 \/ 50)",
+    "updates":"Następny utwór",
+    "history":"Utwory w historii",
+    "songUnavailable":"Utwór niedostępny",
+    "boothAlert":"Alarm konsoli (%1 \/ 50)",
     "songLength":"Długość piosenki (%1 min)",
     "message":{
-      "boothAlertNext":"You are about to DJ!",
-      "boothAlertPos":"You are now %1 in the waitlist",
-      "grab":"%1 chwycił %2 - %3",
-      "stats":"Statystyki: %1 osób lubi -- %2 osób nie lubi -- %3 osób chwyciło utwór",
-      "updates":"Obecnie odtwarzane: %1 przez %2 <br>grane przez: %3",
-      "meh":"%1 nie lubi tego utworu",
+      "boothAlertNext":"Za chwilę zostaniesz DJ'em!",
+      "boothAlertPos":"Jesteś %1 na liście oczekiwania",
+      "grab":"zgrabowano %1 - %2",
+      "stats":"Statystyki: %1 wooty -- %2 mehy -- %3 graby",
+      "updates":"Obecnie odtwarzane: %1 - %2 <br>grane przez: %3",
+      "meh":"dał meh",
       "join":"dołączył do pokoju",
       "leave":"wyszedł z pokoju",
       "history":"Ten utwór jest w historii (%1 z %2)",
-      "historySkipped":"Piosenka jest w historii (%1 z %2), lecz została pominięta przy ostatnim zagraniu",
+      "historySkipped":"Utwór jest w historii (%1 z %2), został pominięty przy poprzednim odtworzeniu",
       "songLength":"Piosenka jest dłuższa niż %1 minut",
-      "songPrivate":"Ta piosenka jest prywatna",
-      "songNotFound":"Piosenka nie znaleziona",
-      "songEmbed":"Ta piosenka ma wyłączone odtwarzanie na stronach zewnętrznych",
-      "songStreamable":"Ta piosenka nie wspiera odtwarzania na żywo"
+      "songPrivate":"Ten utwór jest prywatny",
+      "songNotFound":"Utwór nie znaleziony",
+      "songEmbed":"Nie można odtwarzać tego utworu na stronach zewnętrznych",
+      "songStreamable":"Ten utwór nie wspiera odtwarzania na żywo"
     }
   },
   "info":{
     "header":"Informacje o użytkowniku",
-    "name":"Nazwa",
+    "name":"Nazwa użytkownika",
     "title":"Tytuł",
     "specialTitles":{
-      "developer":"Autor plug&#179",
+      "developer":"Deweloper plug&#179;",
       "sponsor":"plug&#179; Sponsor",
       "ambassador":"plug&#179; Ambasador",
       "donatorDiamond":"plug³ Diamentowy sponsor",
       "donatorPlatinum":"plug&#179; Platynowy sponsor",
       "donatorGold":"plug&#179; Złoty sponsor",
       "donatorSilver":"plug&#179; Srebrny sponsor",
-      "donatorBronze":"plug&#179; Srebrny sponsor",
-      "special":"plug&#179; specjalny pomocnik  - %1"
+      "donatorBronze":"plug&#179; Brązowy sponsor",
+      "special":"Specjalny użytkownik plug&#179; - %1"
     },
     "id":"ID",
     "rank":"Ranga",
-    "joined":"Czas dołączenia",
+    "joined":"Dołączył o",
     "status":"Status",
-    "vote":"Głosuj",
+    "vote":"Głos",
     "position":"Pozycja",
     "points":"Punkty",
-    "wootCount":"Licznik Wootów",
-    "mehCount":"Licznik Meh-ów",
+    "wootCount":"Wooty:",
+    "mehCount":"Mehy:",
     "ratio":"Stosunek Woot\/Meh",
     "djing":"Aktualnie jest DJem",
-    "notInList":"Nie na liście oczekujących",
-    "inWaitlist":"%1\/%2 w liście oczekujących",
+    "notInList":"poza kolejką",
+    "inWaitlist":"%1\/%2 na liście oczekiwania",
     "userDjing":"%1 jest aktualnie DJem",
     "userNextDJ":"%1 jest następnym Dj-em",
     "disconnects":"Rozłączenia",
@@ -153,10 +153,10 @@
     "you":"Ty",
     "regular":"Zwykły",
     "residentdj":"Stały DJ",
-    "bouncer":"Wykidajło",
+    "bouncer":"Bramkarz",
     "manager":"Menedżer",
-    "cohost":"Współgospodarz",
-    "host":"Gospodarz",
+    "cohost":"Współwłaściciel",
+    "host":"Właściciel",
     "ambassador":"Ambasador",
     "admin":"Administrator"
   },
@@ -166,39 +166,39 @@
     "infoDisable":"Możesz je wyłączyć w menu"
   },
   "menu":{
-    "autowoot":"Autowooter",
+    "autowoot":"Autowoot",
     "autojoin":"Automatyczne dołączanie",
-    "chatlog":"ChatLog",
-    "customchatcolors":"Niestandardowe kolory chatu",
+    "chatlog":"Logi czatu",
+    "customchatcolors":"Niestandardowe kolory czatu",
     "autorespond":"Auto odpowiedź AFK",
     "notify":"Powiadomienia",
-    "afktimers":"Licznik AFK",
-    "etatimer":"Przewidywany czas",
+    "afktimers":"Pokaż czas AFK na liście oczekiwania",
+    "etatimer":"Przewidywany czas oczekiwania",
     "roomsettings":"Ustawienia pokoju",
-    "chatimages":"Pokazuj zdjęcia na czacie",
+    "chatimages":"Obrazy na czacie",
     "twitchemotes":"Emotikony Twitcha",
     "controlpanel":"Panel sterowania",
     "showdeletedmessages":"Pokaż usunięte wiadomości",
-    "visualizers":"RCS SoundCloud Visualizers",
-    "inlineuserinfo":"Inline User Info"
+    "visualizers":"Wizualizacje SoundCloud (RCS)",
+    "inlineuserinfo":"Dane użytkownika obok nazwy"
   },
   "vote":{
     "meh":"Meh",
     "woot":"Woot",
-    "grab":"Chwyć",
+    "grab":"Grab",
     "undecided":"Niezdecydowany",
-    "djing":"Dj"
+    "djing":"Jest teraz DJ'em"
   },
   "tooltip":{
-    "stream":"Przełącznik nadawania obrazu\/dźwięku",
-    "clear":"Wyczyść chat",
+    "stream":"Przełącz strumień wideo\/audio",
+    "clear":"Wyczyść czat",
     "afk":"Wiadomość AFK",
-    "reset":"Zresetuj do domyślnych ustawień",
+    "reset":"Zresetuj do ustawień domyślnych",
     "muted":"Wszystkie utwory są wyciszone",
     "mutedOnce":"Aktualna piosenka jest wyciszona"
   },
   "error":{
-    "userNotFound":"Użytkownik nie znaleziony",
+    "userNotFound":"Nie znaleziono użytkownika",
     "alreadyInWaitList":"Użytkownik %1 jest już na liście oczekujących",
     "notInWaitList":"Użytkownik %1 nie jest na liście oczekujących",
     "unknownMenuKey":"Nieznany klawisz menu: %1",
@@ -207,8 +207,8 @@
     "invalidBanTime":"Nie określono czasu. %1 jest nieprawidłowy. Dostępne czasy to 60, 1, 24, 1440, -1",
     "invalidRemoveSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: \/remove @user",
     "invalidWhoisSyntax":"Nieprawidłowa składnia dla tej komendy. Sposób użycia: \/whois @user",
-    "errorGettingPlaylistInfo":"Wystąpił błąd podczas uzyskiwania informacji na temat listy odtwarzania",
-    "noPlaylistsFound":"Nie znaleziono żadnej listy utworów",
+    "errorGettingPlaylistInfo":"Wystąpił błąd przy uzyskiwaniu informacji o liście odtwarzania",
+    "noPlaylistsFound":"Nie znaleziono żadnej listy odtwarzania",
     "yourActivePlaylistIsFull":"Twoja aktywna lista odtwarzania jest pełna",
     "noNextSong":"Nie masz w kolejce żadnych utworów"
   }
