--- a/src/release/langs/lang.lt.json
+++ b/src/release/langs/lang.lt.json
@@ -1,13 +1,13 @@
 {
   "running":"Naudojama plug&#179; versija %1",
-  "commandsHelp":"Rašykite \"\/commands\" kad pamatytumėt paaiškintas pokalbio kambario komandas.",
+  "commandsHelp":"Rašykite \"\/commands\", kad pamatytumėte paaiškintas pokalbio komandas.",
   "autorespond":{
     "default":"Aš nesu prie klaviatūros.",
-    "disable":"Išjunkite AFK Auto-atsiliepiama į pokalbio kambary",
-    "nextIn":"Kitas AFK Auto-atsiliepimas bus išsiųstas nuo %1",
-    "next":"AFK Auto-atsiliepimas artimiausiame paminėjime",
+    "disable":"Išjunkite AFK Auto-atsakymą pokalbyje",
+    "nextIn":"Kitas AFK Auto-atsakymas bus išsiųstas nuo %1",
+    "next":"AFK Auto-atsakymas kitame paminėjime",
     "commandDisable":"%1 AFK pranešimas išjungtas",
-    "commandNotEnabled":"%1 AFK žinutė nebuvo įjungta"
+    "commandNotEnabled":"%1 AFK pranešimas nebuvo įjungtas"
   },
   "autojoin":{
     "commandDisable":"%1 autojoin išjungtas",
@@ -34,42 +34,42 @@
       "leave":"paliko dj eilę",
       "whoami":"gauk savo informaciją",
       "mute":"nustatyti garsą į 0",
-      "automute":"registracija dabar automatiškai užtildys grojančias dainas ateityje",
+      "automute":"registruoti dabar grojančią dainą, kad automatiškai užtildytumėte ją ateityje",
       "unmute":"nustatyti garsą į prieš tai buvusį",
-      "nextsong":"parodyk kita daina grojaraštyje ir ar ji buvo sugrota praeityje ",
+      "nextsong":"parodyti kitą dainą grojaraštyje ir ar ji yra istorijoje",
       "refresh":"perkrauti vaizdo įrašą",
-      "alertson":"sugrok garsą kada būna parašomas paminėtas žodis šiame pokalbiu kambaryje",
-      "alertsoff":"sustok groti garsus kada būna parašomas paminėtas žodis šiame pokalbiu kambaryje",
-      "grab":"pridėti esamą dainą į jūsų pasirinktą grojaraštį",
-      "badges":"slėpti\/rodyti narių ženkliukus pokalbiuose",
-      "getpos":"gauk dabartinę pozicija laukimo eilėje",
+      "alertson":"sugroti garsą, kai būna parašomas paminėtas žodis pokalbyje",
+      "alertsoff":"nebegroti garso, kai būna parašomas paminėtas žodis pokalbyje",
+      "grab":"pridėti dabartinę dainą į pasirinktą grojaraštį",
+      "badges":"slėpti\/rodyti narių ženklelius pokalbyje",
+      "getpos":"gauti dabartinę poziciją laukimo eilėje",
       "version":"rodo versijos numerį",
       "commands":"parodo šį sąrašą",
-      "link":"Įklijuoja plugCubed tinklapio nuoroda į pokalbio kambarį",
-      "whois":"Duoda paprasta informacija apie vartotoja",
-      "skip":"praleisti dabartine daina",
-      "ban":"išspiria pasirinkta vartotoja",
-      "lockskip":"užrakina DJ pulta, praleidžia ir po to atrakina",
-      "lock":"užrakina DJ pulta",
-      "unlock":"atrakina DJ pulta",
-      "add":"prideda nustatytus vartotojus prie dj pulto\/laukimo eilės",
-      "remove":"išmeta nustatytus vartotojus iš dj pulto\/laukimo eilės",
-      "whois all":"parodo vartotojo ID ir vardą kiekvieno esančio kambaryje",
-      "banall":"užblokuoja visus vartotojus esančius kambaryje",
-      "status":"Rodyti plug serverių informaciją",
+      "link":"įklijuoja plugCubed tinklalapio nuorodą į pokalbį",
+      "whois":"duoda pagrindinę informaciją apie vartotoją",
+      "skip":"praleisti dabartinę dainą",
+      "ban":"pašalina pasirinktą vartotoją",
+      "lockskip":"užrakina DJ eilę, praleidžia ir vėl atrakina",
+      "lock":"užrakina DJ eilę",
+      "unlock":"atrakina DJ eilę",
+      "add":"prideda pažymėtą vartotoją prie dj laukimo eilės",
+      "remove":"pašalina nustatytą vartotoją iš dj laukimo eilės",
+      "whois all":"parodo visų vartotojų, esančių kambaryje ID ir vardus",
+      "banall":"užblokuoja visus vartotojus, esančius kambaryje",
+      "status":"rodo plug.dj serverių informaciją",
       "unload":"Išjungia plug&#179;"
     },
     "responses":{
-      "alertson":"Grojamas garsas ant šių žodžių: %1",
-      "alertsoff":"Nebegrojamas garsas ant specifinių žodžių",
-      "badgeon":"Ženkliukai įjungti",
-      "badgeoff":"Ženkliukai išjungti",
-      "nextsong":"Tavo kita daina yra %1 by %2",
-      "isHistory":"Įspėjimas! Ši daina tebėra istorijoje (%1 of %2)",
+      "alertson":"Grojamas garsas, naudojant šiuos žodžius: %1",
+      "alertsoff":"Nebegrojamas garsas, naudojant specifinius žodžius",
+      "badgeon":"Ženkleliai įjungti",
+      "badgeoff":"Ženkleliai išjungti",
+      "nextsong":"Tavo kita daina yra %2 - %1",
+      "isHistory":"Įspėjimas: ši daina tebėra istorijoje (%1 iš %2)",
       "automute":{
-        "automuted":"%1 užtildytas.",
-        "registered":"%1 Užregistruota automatiškai uždrausti groti ateityje.",
-        "unregistered":"%1 pašalinta iš automute sąrašo."
+        "automuted":"%1 automatiškai užtildyta.",
+        "registered":"%1 užregistruota automatiškai užtildyti ateityje.",
+        "unregistered":"%1 pašalinta iš automatinio užtildymo sąrašo."
       },
       "status":{
         "rest":"Trukmė: %1 %2 [%3ms]",
@@ -78,35 +78,35 @@
     }
   },
   "eta":{
-    "boothAvailable":"Prisijunkite į waitlistą dabar, ir iš karto grosite!",
+    "boothAvailable":"Jei prisijungsite į eilę dabar, grosite iš karto!",
     "alreadyDJ":"Jūs jau grojate!",
-    "waitListTime":"Jūsų vieta waitliste %1 of %2, jūs grosite maždaug po %3!",
-    "joinTime":"Prisijunkite į waitlistą dabar, ir iš karto grosite maždaug po %1!"
+    "waitListTime":"Jūsų vieta eilėje %1 iš %2, jūs grosite maždaug po %3!",
+    "joinTime":"Jei prisijugsite į eilę dabar, grosite po maždaug %1!"
   },
   "notify":{
-    "header":"Vartotojo info",
+    "header":"Pokalbio pranešimai",
     "join":"Vartotojo Prisijungimas",
     "leave":"Vartotojo Išėjimas",
-    "grab":"Narys Pridėjo",
-    "meh":"Nepatinka",
-    "stats":"Dainų nustatymai",
-    "updates":"Dainu atnaujinimai",
-    "history":"Dainų istorija",
+    "grab":"Vartotojo Pridėjimas",
+    "meh":"Vartotojo Mehs",
+    "stats":"Dainos statistika",
+    "updates":"Dainos atnaujinimai",
+    "history":"Dainos istorijoje",
     "songUnavailable":"Daina negalima",
-    "boothAlert":"Perspėjimas Eilėje (%1 \/ 50)",
-    "songLength":"Dainos trukmė minutėmis",
+    "boothAlert":"Eilės pranešimas (%1 \/ 50)",
+    "songLength":"Dainos trukmė (%1 min)",
     "message":{
-      "boothAlertNext":"Netrukus gros tavo daina!",
-      "boothAlertPos":"Dabar esi %1 dj eilėje",
+      "boothAlertNext":"Netrukus tavo eilė groti!",
+      "boothAlertPos":"Dabar esi %1 eilėje",
       "grab":"pridėjo %1 - %2",
-      "stats":"Statistika: %1 palaikymai -- %2 mehs -- %3 pasiėmimai",
-      "updates":"Dabar Groja: %1 by %2<br \/>Kas leidžia dainą: %3",
-      "meh":"%1 nepatinka ši daina",
+      "stats":"Statistika: %1 woots -- %2 mehs -- %3 pridėjimai",
+      "updates":"Dabar Grojama: %2 - %1<br>Groja: %3",
+      "meh":"%1 meh'ino šią dainą",
       "join":"prisijungė",
       "leave":"išėjo",
-      "history":"Daina rasta praeityje (%1 of %2)",
-      "historySkipped":"Daina rasta praeityje (%1 of %2), bet buvo praleista",
-      "songLength":"Daina ilgesnė negu %1 minutės",
+      "history":"Daina yra istorijoje (%1 iš %2)",
+      "historySkipped":"Daina yra istorijoje (%1 iš %2), bet buvo praleista",
+      "songLength":"Daina ilgesnė nei %1 minutės",
       "songPrivate":"Daina privati",
       "songNotFound":"Daina nerasta",
       "songEmbed":"Daina buvo išjungta",
@@ -114,7 +114,7 @@
     }
   },
   "info":{
-    "header":"Vartotojo info",
+    "header":"Vartotojo informacija",
     "name":"Vardas",
     "title":"Pavadinimas",
     "specialTitles":{
@@ -128,8 +128,8 @@
       "donatorBronze":"plug&#179; Bronzinis Remėjas",
       "special":"plug&#179; Ypatingas Remėjas - %1"
     },
-    "id":"ID identifikacija",
-    "rank":"Rangas",
+    "id":"ID",
+    "rank":"Kategorija",
     "joined":"Prisijungimo laikas",
     "status":"Būsena",
     "vote":"Balsas",
@@ -138,21 +138,21 @@
     "wootCount":"Woot Skaičius",
     "mehCount":"Meh Skaičius",
     "ratio":"Woot\/Meh Santykis",
-    "djing":"DJ'avimas",
-    "notInList":"Ne eilėje ir ne stende",
+    "djing":"Šiuo metu groja",
+    "notInList":"Ne eilėje ir negroja",
     "inWaitlist":"%1\/%2 eilėje",
-    "userDjing":"%1 šiuo metu DJ'jauja",
-    "userNextDJ":"%1 sekantis DJ'us",
+    "userDjing":"%1 šiuo metu groja",
+    "userNextDJ":"%1 netrukus gros",
     "disconnects":"Atsijungimai",
     "lastDisconnect":"Paskutinis atsijungimas",
-    "lastPosition":"Pozicija",
+    "lastPosition":"Vieta",
     "time":"Laikas",
-    "lastMessage":"Paskutinė žinutė"
+    "lastMessage":"Paskutinis pranešimas"
   },
   "ranks":{
     "you":"Jūs",
     "regular":"Reguliarus lankytojas",
-    "residentdj":"Reguliarus DJ",
+    "residentdj":"Nuolatinis DJ",
     "bouncer":"Apsauginis",
     "manager":"Vadovas",
     "cohost":"Bendras savininkas",
@@ -163,51 +163,51 @@
   "roomSpecificSettings":{
     "infoHeader":"Šis kambarys naudoja specialius nustatymus",
     "infoHeaderCredits":"Šis kambarys naudoja specialius nustatymus pagal %1",
-    "infoDisable":"Juos galite juos atjungi meniu"
+    "infoDisable":"Juos galite išjungti meniu"
   },
   "menu":{
     "autowoot":"AutoWoot",
     "autojoin":"Auto Prisijungimas",
-    "chatlog":"Pokalbių logai",
+    "chatlog":"Pokalbio žurnalas",
     "customchatcolors":"Specialios pokalbio spalvos",
-    "autorespond":"Išjunkite \"Aš nesu prie klaviatūros\" Auto-atsiliepimą",
+    "autorespond":"AFK Auto-atsakymas",
     "notify":"Pranešimai",
-    "afktimers":"\"Aš nesu prie klaviatūros\"  Laikai",
+    "afktimers":"AFK Laikmatis",
     "etatimer":"ETA laikmatis",
     "roomsettings":"Kambario nustatymai",
-    "chatimages":"Pokalbio žinutės",
-    "twitchemotes":"Twitch paveiksliukai",
+    "chatimages":"Pokalbio paveikslėliai",
+    "twitchemotes":"Twitch šypsenėlės",
     "controlpanel":"Valdymo skydas",
-    "showdeletedmessages":"Rodyti ištrintas žinutes",
-    "visualizers":"RCS SoundCloud Vizualaizeriai",
+    "showdeletedmessages":"Rodyti ištrintus pranešimus",
+    "visualizers":"RCS SoundCloud Vizualizacijos",
     "inlineuserinfo":"Papildoma Vartotojo Informacija"
   },
   "vote":{
-    "meh":"Nepatinka",
-    "woot":"Patinka",
+    "meh":"Meh",
+    "woot":"Woot",
     "grab":"Pridėti",
     "undecided":"Nenuspręsta",
-    "djing":"DJ'avimas"
+    "djing":"Groja"
   },
   "tooltip":{
-    "stream":"Įjungti \/ Išjungti  Vaizdą\/Garsą",
-    "clear":"Valyti pokalbį",
-    "afk":"\"Aš nesu prie klaviatūros\" žinutė",
+    "stream":"Perjungti Vaizdą\/Garsą",
+    "clear":"Išvalyti pokalbį",
+    "afk":"AFK Pranešimas",
     "reset":"Atkurti numatytuosius nustatymus",
     "muted":"Visos dainos užtildytos",
     "mutedOnce":"Šiuo metu grojanti daina yra užtildyta"
   },
   "error":{
     "userNotFound":"Vartotojas nerastas",
-    "alreadyInWaitList":"Narys %1 jau yra waitliste",
-    "notInWaitList":"Narys %1 nėra waitliste",
+    "alreadyInWaitList":"Vartotojas %1 jau yra eilėje",
+    "notInWaitList":"Vartotojas %1 nėra eilėje",
     "unknownMenuKey":"Nežinomas meniu mygtukas: %1",
-    "invalidAddSyntax":"Neleistina sintaksė pridėti komandą. Naudojimas: \/add @user",
-    "invalidBanSyntax":"Neleistina sintaksė ban komandai. Naudojimas: \/ban @user arba \/ban @user::time::reason",
+    "invalidAddSyntax":"Neteisingai naudojama pridėjimo komanda. Naudojimas: \/add @user",
+    "invalidBanSyntax":"Neteisingai naudojama blokavimo komanda. Naudojimas: \/ban @user arba \/ban @user::time::reason",
     "invalidBanTime":"Nustatytas laikas %1 yra neleistinas. Galimi laikai yra 60, 1, 24, 1440, -1",
-    "invalidRemoveSyntax":"Neleistina sintaksė šalinti komandai. Naudojimas: \/remove @user",
-    "invalidWhoisSyntax":"Neleistina sintaksė whois komandai. Naudojimas: \/whois @user",
-    "errorGettingPlaylistInfo":"Klaida gaunant grojaraščio informacija",
+    "invalidRemoveSyntax":"Neteisingai naudojama šalinimo komanda. Naudojimas: \/remove @user",
+    "invalidWhoisSyntax":"Neteisingai naudojama whois komanda. Naudojimas: \/whois @user",
+    "errorGettingPlaylistInfo":"Klaida gaunant grojaraščio informaciją",
     "noPlaylistsFound":"Grojaraštis nerastas",
     "yourActivePlaylistIsFull":"Jūsų grojaraštis pilnas",
     "noNextSong":"Jūs neturite jokios dainos eilėje"
